changed path of p5 libs

--- a/CreativeCode/index.html
+++ b/CreativeCode/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title>Creative Code</title>
-    <script src="/libraries/p5.js" type="text/javascript"></script>
-    <script src="/libraries/addons/p5.sound.js" type="text/javascript"></script>
+    <script src="./libraries/p5.js" type="text/javascript"></script>
+    <script src="./libraries/addons/p5.sound.js" type="text/javascript"></script>
 
     <script src="sketch.js" type="text/javascript"></script>
 
