--- a/CreativeCode/index.html
+++ b/CreativeCode/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Creative Code</title>
     <script src="../libraries/p5.js" type="text/javascript"></script>
     <script src="../libraries/addons/p5.sound.js" type="text/javascript"></script>
