--- a/pizza-falafel/index.html
+++ b/pizza-falafel/index.html
@@ -7,7 +7,7 @@
     <script src="../libraries/p5.js" type="text/javascript"></script>
     <script src="../libraries/addons/p5.sound.js" type="text/javascript"></script>
 
-    <script src="sketch.js" type="text/javascript"></script>
+    <script src="pizza-falafel.js" type="text/javascript"></script>
 
     <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
   </head>
